blocks/hero-banner/vif/hero-banner.css
.hero-banner {
  font-family: "Victoria Two";
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 100vh; /* Adjusted height to reduce overall block height */
}

.hero-banner .hero-banner-content {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.hero-banner .hero-banner-images {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.hero-banner .hero-banner-images img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: top; /* Crop from the top */
}

.hero-banner .hero-banner-text-overlay {
  position: absolute;
  top: 50%;
  right: 5%;
  transform: translateY(-50%);
  color: var(--color-neutral-50);
  padding: var(--space-space-8);
  text-align: right;
}

.hero-banner .hero-banner-text-overlay .limited-time {
  color: var(
    --tlc-logo-brand-logo-main,
    var(--tlc-logo-brand-logo-main, #ffffff)
  );
  text-align: center;
  font-family: var(--font-family-body, "Calibre 2");
  font-size: var(--font-size-font-size-14-12, 14px);
  font-style: normal;
  font-weight: 700;
  line-height: 130%; /* 18.2px */
  text-transform: uppercase;
}

.hero-banner .hero-banner-text-overlay .price {
  font-size: 2.5rem;
  margin: 0;
  font-family: "Victoria Two";
  color: #ffffff;
  font-size: 48px;
  font-style: normal;
  font-weight: 400;
  line-height: 140%;
  text-align: center;
}

.hero-banner .hero-banner-text-overlay .details {
  color: var(--text-text-main, var(--text-text-main, #ffffff));
  text-align: center;
  margin: 0 0 10px 0 !important;
  font-family: var(--font-family-body, "Calibre 2");
  font-size: var(--font-size-font-size-16-14, 16px);
  font-style: normal;
  font-weight: 400;
  line-height: 140%; /* 22.4px */
}

.hero-banner .hero-banner-text-overlay .shop-now {
  color: var(
    --tlc-button-flat-default-text,
    var(--tlc-button-flat-default-text, #ffffff)
  );
  /* underline/md/bold */
  font-family: var(--font-family-body, "Calibre 2");
  font-size: var(--font-size-font-size-16-14, 16px);
  font-style: normal;
  font-weight: 700;
  line-height: 140%; /* 22.4px */
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-decoration-skip-ink: none;
  text-decoration-thickness: auto;
  text-underline-offset: auto;
  text-underline-position: from-font;
  margin: 0 72px;
}

@media (max-width: 768px) {
  .hero-banner {
    flex-direction: column;
  }

  .hero-banner .hero-banner-text-overlay {
    position: static;
    transform: none;
    width: 100%;
    text-align: center;
  }
}

